Testy w CustomerService; poprawki